# drd

./: Cargo.toml
.github/workflows/: ci.yml
corpus/: long.txt
schema/: schema.sql
src/: main.rs
