[package]
name = "drd"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
hostname = "0.4"
anyhow = "1.0"
async-recursion = "1.1"